solve landmarks and color contrasts

--- a/css/layout.css
+++ b/css/layout.css
@@ -25,7 +25,7 @@
     /* --secondary-orange: #f0755c; Darker reddish-orange for accents */
     --secondary-orange: #f75231;  /* Darker reddish-orange for accents */
     --main-orange: #B33A28; /* Deep, bold reddish-orange for primary elements */
-    --text-color: #1F1F1F; /* Almost black for excellent readability */
+    --text-color: #05073C; /* Almost black for excellent readability */
 }
 
 html {
